[tool.isort]
py_version = 3
line_length = 99
profile = "google"
src_paths = ["mongorunway", "tests"]

[tool.mypy]
strict = true
allow_redefinition = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
implicit_reexport = false
show_error_codes = true

# Warnings
warn_unused_configs = true
warn_return_any = false
warn_unreachable = true
warn_no_return = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.black]
line-length = 99
target-version = ["py39"]

[tool.poetry]
name = "mongorunway"
version = "1.0.2a"
description = "A MongoDB migration tool."
authors = ["Animatea <animatea.programming@gmail.com>"]
readme = "PYPI_README.md"
license = "MIT"
homepage = "https://github.com/Animatea/mongorunway"
repository = "https://github.com/Animatea/mongorunway"
documentation = "https://animatea.github.io/mongorunway/"
include = [
    "LICENSE", "assets",
]
keywords = [
    "migration", "mongodb", "mongo", "mongorunway",
]
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python :: Implementation :: CPython",
    "Typing :: Typed",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
]
packages = [
    { include = "mongorunway" },
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/Animatea/mongorunway/issues"
"Documentation" = "https://animatea.github.io/mongorunway/"

[tool.poetry.dependencies]
python = "^3.9"
attrs = "23.1.0"
click = "8.1.3"
terminaltables = "3.1.10"
PyYAML = "6.0.0"
tzdata = "2023.3"
pymongo = "4.3.3"

[tool.poetry.dev-dependencies]
pytest = "7.3.1"
pytest-mongodb = "2.2.0"
mypy = "1.3.0"
black = "23.3.0"
isort = "5.12.0"
nox = "2023.4.22"
typing_extensions = "4.5.0"

[tool.poetry.scripts]
mongorunway = "mongorunway.presentation.cli:cli"

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.core.masonry.api"
